fixed paragraph alignment using manual css

--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@
     border-bottom: gray solid 1px;
     font-family: fantasy;
 }
+
+.about_para{
+	margin-top: 75px;
+
+}
